--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+.App{
+    width: 100%;
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 1920px) {
+    /* CSS that should be displayed if width is equal to or less than 800px goes here */
+    .top-header{
+        margin-top: 100px;
+    }
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  @media (max-width: 1311px) {
+    .top-header{
+        margin-top: 50px;
+    }
+    /* CSS that should be displayed if width is equal to or less than 800px goes here */
   }
-  to {
-    transform: rotate(360deg);
+  @media (max-width: 730px) {
+    .container-app{
+        padding:0px 20px;
+    }
+    /* .top-header{
+        margin-top: 20px;   
+    } */
+    .titlePlayer{
+        font-size: 50px;
+        line-height: 58.59px;
+        color: #E7E7E7;
+        margin-bottom: 10px;
+        margin:20px 0px
+    }
+    .image-rugby{
+        height: 281px;
+        justify-content: center;
+        display: flex;
+        margin-bottom: 10px;
+    }
+    .wrapper-title-desc{
+        height: 33px;
+        display: flex;
+    }
+    .title-id{
+        font-size: 14px;
+        font-weight: 400;
+        color: #000000;
+        box-shadow: 0 16.41px 0 0 #603EBE;
+        height: 4px;
+        border-radius: 4px;
+        letter-spacing: 1.5px;
+        margin-top: 6px;
+        line-height: 16.41px;
+        margin-right: 10px;
+    }
+    .title-desc{
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 32.81px;
+        letter-spacing: 1.5px;
+        color:#C2C2C2
+    }
+    .desc{
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 17.58px;
+        margin-top: 15px;
+    }
+    .image-basketball{
+        height:250px;
+        justify-content: center;
+        display: flex;
+        margin-bottom: 10px;
+    }
+    .swiper{
+        margin: 20px 0px;
+        display: flex;
+        justify-content: center;
+        img{
+           width: 54px;
+           height: 10px; 
+        }
+    }
   }
-}
