--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@
     .top-header{
         margin-top: 50px;
     }
-    /* CSS that should be displayed if width is equal to or less than 800px goes here */
   }
   @media (max-width: 730px) {
     .container-app{
@@ -26,8 +25,7 @@
         font-size: 50px;
         line-height: 58.59px;
         color: #E7E7E7;
-        margin-bottom: 10px;
-        margin:20px 0px
+        padding:20px 0px
     }
     .image-rugby{
         height: 281px;
@@ -71,7 +69,7 @@
         margin-bottom: 10px;
     }
     .swiper{
-        margin: 20px 0px;
+        padding: 20px 0px;
         display: flex;
         justify-content: center;
         img{
