--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,9 @@
     .container-app{
         padding:0px 20px;
     }
-    /* .top-header{
-        margin-top: 20px;   
-    } */
+    .top-header{
+        margin-top: 0px;   
+    }
     .titlePlayer{
         font-size: 50px;
         line-height: 58.59px;
