--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,3 +1,4 @@
-.swiper{
-    height: 130px !important;
+
+.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+    bottom: var(--swiper-pagination-bottom, 30px);
 }
